syntax = "proto3";

package delegation;

service Delegation {
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserResponse) {}
    rpc FindUserByName(FindUserByNameRequest) returns (FindUserByNameResponse) {}
}

message GetUserByIDRequest {
    string id = 1;
}

message User {
    string id = 1;
    string mail = 2;
    string first_name = 3;
    string last_name = 4;
    string full_name = 5;
    string hierarchy = 6;
}

message GetUserResponse {
    User user = 1;   
}

message FindUserByNameRequest {
    string name = 1;
}

message FindUserByNameResponse {
    repeated User users = 1;
}

